--- a/conf/deployment.yml
+++ b/conf/deployment.yml
@@ -52,14 +52,14 @@ environments:
       # #######################################################################################
       # # this is an example job with single ETL task based on 2.1 API and wheel_task format #
       # ######################################################################################
-      # - name: "databricks_with_poetry-sample-etl"
-      #   tasks:
-      #     - task_key: "main"
-      #       <<: *basic-static-cluster
-      #       python_wheel_task:
-      #         package_name: "databricks_with_poetry"
-      #         entry_point: "etl" # take a look at the setup.py entry_points section for details on how to define an entrypoint
-      #         parameters: ["--conf-file", "file:fuse://conf/tasks/sample_etl_config.yml"]
+      - name: "databricks_with_poetry-sample-etl"
+        tasks:
+          - task_key: "main"
+            <<: *basic-static-cluster
+            python_wheel_task:
+              package_name: "databricks_with_poetry"
+              entry_point: "etl" # take a look at the setup.py entry_points section for details on how to define an entrypoint
+              parameters: ["--conf-file", "file:fuse://conf/tasks/sample_etl_config.yml"]
       # #############################################################
       # # this is an example multitask job with notebook task       #
       # #############################################################
