--- a/conf/deployment.yml
+++ b/conf/deployment.yml
@@ -4,6 +4,7 @@ custom:
   basic-cluster-props: &basic-cluster-props
     spark_version: "13.0.x-scala2.12"
     node_type_id: "i3.xlarge"
+    policy_id: "E05E27B13F0003A0"
     autoscale:
       min_workers: 1
       max_workers: 2
@@ -11,7 +12,7 @@ custom:
   basic-static-cluster: &basic-static-cluster
     new_cluster:
       <<: *basic-cluster-props
-      num_workers: 1
+      num_workers: 2
       node_type_id: "i3.xlarge"
 
 build:
