--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.9.0"
 urllib3 = "1.26.6"
 pandas = "1.4.4"
 scikit-learn = "1.1.1"
+pyyaml = "6.0"
 databricks-connect = "13.0.0"
 chispa = "^0.9.2"
 pytest = "^7.0.0"
