--- a/conf/deployment.yml
+++ b/conf/deployment.yml
@@ -61,37 +61,37 @@ environments:
               package_name: "databricks_with_poetry"
               entry_point: "etl" # take a look at the setup.py entry_points section for details on how to define an entrypoint
               parameters: ["--conf-file", "file:fuse://conf/tasks/sample_etl_config.yml"]
-      # #############################################################
-      # # this is an example multitask job with notebook task       #
-      # #############################################################
-      # - name: "databricks_with_poetry-sample-multitask"
-      #   job_clusters:
-      #     - job_cluster_key: "default"
-      #       <<: *basic-static-cluster
-      #   tasks:
-      #     - task_key: "etl"
-      #       job_cluster_key: "default"
-      #       spark_python_task:
-      #         python_file: "file://databricks_with_poetry/tasks/sample_etl_task.py"
-      #         parameters: [ "--conf-file", "file:fuse://conf/tasks/sample_etl_config.yml" ]
-      #     - task_key: "ml"
-      #       depends_on:
-      #         - task_key: "etl"
-      #       job_cluster_key: "default"
-      #       python_wheel_task:
-      #         package_name: "databricks_with_poetry"
-      #         entry_point: "ml"
-      #         parameters: [ "--conf-file", "file:fuse://conf/tasks/sample_ml_config.yml" ]
+      #############################################################
+      # this is an example multitask job with notebook task       #
+      #############################################################
+      - name: "databricks_with_poetry-sample-multitask"
+        job_clusters:
+          - job_cluster_key: "default"
+            <<: *basic-static-cluster
+        tasks:
+          - task_key: "etl"
+            job_cluster_key: "default"
+            spark_python_task:
+              python_file: "file://databricks_with_poetry/tasks/sample_etl_task.py"
+              parameters: [ "--conf-file", "file:fuse://conf/tasks/sample_etl_config.yml" ]
+          - task_key: "ml"
+            depends_on:
+              - task_key: "etl"
+            job_cluster_key: "default"
+            python_wheel_task:
+              package_name: "databricks_with_poetry"
+              entry_point: "ml"
+              parameters: [ "--conf-file", "file:fuse://conf/tasks/sample_ml_config.yml" ]
           ###############################################################################
           # this is an example task based on the notebook                               #
           # Please note that first you'll need to add a Repo and commit notebook to it. #
           ###############################################################################
-          # - task_key: "notebook"
-          #   deployment_config:
-          #     no_package: true # we omit using package since code will be shipped directly from the Repo
-          #   # depends_on:
-          #   #   - task_key: "ml"
-          #   job_cluster_key: "default"
-          #   notebook_task:
-          #     notebook_path: "/Users/dustin.vannoy@databricks.com/databricks_with_poetry/notebooks/sample_notebook"
+          - task_key: "notebook"
+            deployment_config:
+              no_package: true # we omit using package since code will be shipped directly from the Repo
+            # depends_on:
+            #   - task_key: "ml"
+            job_cluster_key: "default"
+            notebook_task:
+              notebook_path: "/Users/dustin.vannoy@databricks.com/databricks_with_poetry/notebooks/sample_notebook"
 
