--- a/.github/workflows/onrelease.yml
+++ b/.github/workflows/onrelease.yml
@@ -84,3 +84,19 @@ jobs:
       #       poetry build
       #       ls
       #       dbx deploy -e prod --workflows=databricks_with_poetry-sample-etl
+      - name: Deploy integration test
+        env: 
+          DATABRICKS_HOST: ${{secrets.DATABRICKS_HOST}}
+          DATABRICKS_TOKEN: ${{secrets.DATABRICKS_TOKEN}}
+        run: |
+            source .venv/bin/activate
+            poetry build
+            ls
+            dbx deploy
+      - name: Run integration test
+        env: 
+          DATABRICKS_HOST: ${{secrets.DATABRICKS_HOST}}
+          DATABRICKS_TOKEN: ${{secrets.DATABRICKS_TOKEN}}
+        run: | 
+              source .venv/bin/activate
+              dbx launch --trace databricks_with_poetry-sample-tests
