Custom setup using poetry, dbx, and github actions (#1)
* Update databricks connect spark session create

* Cleanup spark_utils

* Add etl task to workflows deploy

* Update github action

* Remove old function

* Update example_app spark create

* Fix profile name

* Update push action

* Update cluster policy

* Fix github action yaml

* Add worfklow integration test

* Update poetry requirements

* Remove coverage param for integration test workflow

* Comment out unnecessary tests

* Fix spark session in worfklow tests

* Add entrypoint for etl

* Add entrypoint

* Add ml worfklow

* Update release action

--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -74,6 +74,15 @@ jobs:
         run: |
           source .venv/bin/activate
           pytest tests/ -m "not integration"
+      
+      - name: Run integration tests
+        env: 
+          DATABRICKS_HOST: ${{secrets.DATABRICKS_HOST}}
+          DATABRICKS_TOKEN: ${{secrets.DATABRICKS_TOKEN}}
+          DATABRICKS_CLUSTER_ID: ${{secrets.DATABRICKS_CLUSTER_ID}}
+        run: |
+          source .venv/bin/activate
+          pytest tests/ -m "integration"
 
       - name: Deploy integration test
         env: 
@@ -83,7 +92,7 @@ jobs:
             source .venv/bin/activate
             poetry build
             ls
-            dbx deploy --workflows=databricks_with_poetry-sample-tests
+            dbx deploy
       - name: Run integration test
         env: 
           DATABRICKS_HOST: ${{secrets.DATABRICKS_HOST}}
