--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,22 @@ authors = ["dustinvannoy-db <dustin.vannoy@databricks.com>"]
 readme = "README.md"
 packages = [{include = "databricks_with_poetry"}]
 
+[tool.poetry.scripts]
+etl = 'databricks_with_poetry.tasks.sample_etl_task:entrypoint'
+ml = 'databricks_with_poetry.tasks.sample_ml_task:entrypoint'
+
 [tool.poetry.dependencies]
 python = "^3.9.0"
 urllib3 = "1.26.6"
 pandas = "1.4.4"
 scikit-learn = "1.1.1"
-
-
-[tool.poetry.group.dev.dependencies]
-databricks-connect = "13.0.0"
+pyyaml = "6.0"
 chispa = "^0.9.2"
 pytest = "^7.0.0"
+
+[tool.poetry.group.dev.dependencies]
 dbx = "^0.8.0"
+databricks-connect = "13.0.0"
 
 [build-system]
 requires = ["poetry-core"]
